--- a/styles/camagru.css
+++ b/styles/camagru.css
@@ -1,122 +1,9 @@
-html {
-    height: 100%;
-    min-height: 100%;
-}
-body {
-    margin: 0px;
-    height: 100%;
-    min-height: 100%;
-    font-family: "Myriad Pro";
-}
-header {
-    height: 6vh;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: white;
-    box-shadow: 0 2px 5px darkgrey;
-    z-index: 1;
-}
-#navigate {
-    font-size: 3vh;
-    text-transform: uppercase;
-    position: relative;
-    height: 4vh;
-    padding: 1vh;
-    padding-left: 10%;
-    padding-right: 10%;
-}
-#navigate div {
-    float: left;
-    padding: 0.75vh;
-}
-#navigate #logo {
-    padding-right: 30%;
-}
-#navigate a {
-    color: black;
-    text-decoration: none;
-}
-.wrapper {
-    width: 100%;
-    height: calc(100% - 6vh);
-    z-index: 0;
-    background-color: #fafafa;
-    margin-bottom: -60px;
-    padding-top: 6vh;
-}
-.main_content {
-    position: relative;
-    width: 70%;
-    padding-right: 15%;
-    padding-left: 15%;
-    height: calc(100% - 60px);
-    overflow: auto;
-}
-#webcam{
-    position: relative;
-    height: 100%;
-}
-#video{
-    position: absolute;
-}
-#viewport {
-    position: absolute;
-}
-#canvas {
-    position: absolute;
-}
-.masks {
-    position: absolute;
-    top: 480px;
-}
-.masks img {
-    height: 6vh;
+.Site {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
-.masksSelect {
-    overflow: scroll;
-}
-
-[type=radio] {
-    position: absolute;
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-/* IMAGE STYLES */
-[type=radio] + img {
-    cursor: pointer;
-}
-/* CHECKED STYLES */
-[type=radio]:checked + img {
-    outline: 2px solid #f00;
-}
-
-.main_photos {
-    position: relative;
-    float: left;
-    padding: 2vh;
-}
-.photo_home {
-    height: 40vh;
-}
-.push {
-    height: 60px;
-}
-footer {
-    text-align: center;
-    background-color: white;
-    height: 60px;
-    width: 100%;
-    color: gray;
-    box-shadow: 0px -2px 5px darkgrey;
-    z-index: 1;
-}
-footer div {
-    padding: 10px;
-}
-footer span {
-    color: black;
-    font-weight: bold;
+.Site-content {
+    flex: 1;
 }
